WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212794
AXIsolatedTree::updateChildren should not call nodeForID.
https://bugs.webkit.org/show_bug.cgi?id=212794
Summary
AXIsolatedTree::updateChildren should not call nodeForID.
Andres Gonzalez
Reported
2020-06-04 18:02:24 PDT
AXIsolatedTree::updateChildren should not call nodeForID.
Attachments
Patch
(16.84 KB, patch)
2020-06-04 18:20 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-06-04 18:20:49 PDT
Created
attachment 401107
[details]
Patch
EWS
Comment 2
2020-06-05 10:15:51 PDT
Committed
r262626
: <
https://trac.webkit.org/changeset/262626
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401107
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-05 10:16:20 PDT
<
rdar://problem/64034018
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug